--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -75,7 +75,7 @@ mark {
 
 :root {
   color-scheme: dark;
-  --primary: #ffa31a;
+  --primary: #1a40ff;
   --background: #000000;
   --background-card: #0a0a0a;
   --background-btn: #ffffff;
@@ -85,8 +85,8 @@ mark {
   --heading: #e9e9e9;
   --border: #2f3337;
   /* EFFECTS */
-  --primary-hvr: #d68306;
-  --primary-transluced: #ffa31a18;
+  --primary-hvr: #1129a2;
+  --primary-transluced: #1a40ff18;
   --background-hvr: #0f0f0f;
   --background-card-hvr: rgba(255, 255, 255, 0.03);
   --backgroun-header: #000000a6;
